# ew

./: .gitignore  __init__.py  config.py  loadrecs.py  log.txt  main.py  menu.old.py  menu.py  printstests.py  pyproject.toml  setpath.py  tests_words.py  user.py  usercreate.py  users.py
phrases/: default.json  default.txt  standartize.py
saveload/: loadrecs.py  setpath.py
testing/: prints.py  testing.py
tui/: exitwin.py  mainmenuwin.py  mywidgets.py  testwin.py  trainwin.py  win_exit.py  win_mainmenu.py  win_test.py  win_train.py  win_users.py
txt2json/: standartize.py
users/default/: default.json
utilities/: compile.py  convert.py  intersection.py  json2json.py
utils/: loadrecs.py  standartize.py  usercreate.py
